force-app/main/default/objects/Case/fields/Tracking_details_received__c.field-meta.xml
<CustomField>
    <fullName>Tracking_details_received__c</fullName>
    <description>This will make sure whether the tracking details is received from customer or not? if yes then whether it is correct or not? based on this an automated mail will trigger to customer to send tracking details</description>
    <label>Tracking Details Received?</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sample_received__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>