force-app/main/default/objects/Case/fields/User_Profile__c.field-meta.xml
<CustomField>
    <fullName>User_Profile__c</fullName>
    <label>User Profile</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FCI Disti Community User</fullName>
            </value>
            <value>
                <fullName>FCI Disti Restricted User</fullName>
            </value>
            <value>
                <fullName>FCI Customer Community</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>