force-app/main/default/objects/Case/fields/User_Type__c.field-meta.xml
<CustomField>
    <fullName>User_Type__c</fullName>
    <label>User Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Community</fullName>
                <label>Community/Portal</label>
            </value>
            <value>
                <fullName>System Admin</fullName>
                <label>System Admin (Non Business User)</label>
            </value>
            <value>
                <fullName>Non-System Admin</fullName>
                <default>true</default>
                <label>Non-System Admin (Business User)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>