force-app/main/default/objects/Case/fields/Warning__c.field-meta.xml
<CustomField>
    <fullName>Warning__c</fullName>
    <formula>IMAGE( 
CASE( SLA_Picklist__c, 
&quot;Within SLA&quot;, &quot;/img/samples/flag_green.gif&quot;,
&quot;Warning&quot;, &quot;/img/samples/flag_yellow.gif&quot;,
&quot;Miss&quot;, &quot;/img/samples/flag_red.gif&quot;, 
&quot;/s.gif&quot;), 
&quot;SLA Flag&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Red flag means request is non-compliant with SLA</inlineHelpText>
    <label>SLA Flag</label>
    <type>Text</type>
</CustomField>