force-app/main/default/objects/Case/fields/Way_bill_number__c.field-meta.xml
<CustomField>
    <fullName>Way_bill_number__c</fullName>
    <label>Way Bill Number</label>
    <length>26</length>
    <type>Text</type>
</CustomField>